2010-11-07  Rajarshi Guha  <guhar@Rajarshi-Guha-MacBook-Pro.local>

	* R/iterating.R (nextEl): Updated iterator so that we don't skip 
	the first molecule. Also reorganized the code so that it makes
	more sense

2010-10-21  Rajarshi Guha  <guhar@Rajarshi-Guha-MacBook-Pro.local>

	* Updated to latest CDK (1.4.x) which resolves bugs in formula
	generation and reading SD tags consisting of single spaces. Also
	updates to Murkco fragmentatin code which ensures that the proper
	fragments are returned when requested as molecule objects. This
	version also includes 3 new descriptors (FMF, acidic group and
	basic group counts). 
	

2010-05-29  Rajarshi Guha  <guhar@OfficeMac.local>

	* man/getfp.Rd: Updated docs for the newly included Pubchem fingerprint

	* R/rcdk.R: Updated fingerprinter to support the Pubchem fingerprints
